--- a/form.html
+++ b/form.html
@@ -8,7 +8,9 @@
         background-color:darkgrey;
     }
     h1{
+        font-style: oblique;
         color:blue;
+    }
     form {
         font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         font-size:medium;
